[project]
name = "pytest-kubernetes"
version = "0.1.0"
description = "Kubernetes-based testing for pytest"
readme = "README.md"
authors = [
    { name = "Thomas Jack Carroll", email = "thomas.jack.carroll@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
