[project]
name = "pytest-k8s"
version = "0.1.0"
description = "Kubernetes-based testing for pytest"
readme = "README.md"
authors = [
    { name = "Thomas Jack Carroll", email = "thomas.jack.carroll@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kubernetes>=33.1.0",
    "pytest>=8.4.1",
    "PyYAML>=6.0",
]
classifiers = [
    "Framework :: Pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-v",                    # Verbose output
    "--capture=no",          # No output capturing
    "--log-cli-level=INFO",  # Show logs at INFO level and above
    "--k8s-cluster-scope=session",  # Default cluster scope
]
pytester_example_dir = "tests/pytest_k8s/fixtures"
markers = [
    "slow: marks tests as slow running tests",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[project.entry-points.pytest11]
pytest_k8s = "pytest_k8s"
